CHANGED: ogp image

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<link rel="icon" href="%PUBLIC_URL%/logo.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#000000" />
-	<meta property="og:image" content="assets/images/main/windTurbineDesktop.jpg" />
+	<meta property="og:image" content="%PUBLIC_URL%/windTurbineDesktop.jpg" />
 	<meta name="description" content="Web site of Ecosolution company" />
 	<title>Ecosolution</title>
 </head>
